--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </section>
         <section>
             <h2>formats</h2>
+            <img src="./images/watermelon.png" alt="watermelon">
             <ul>
                 <li>
                     <article>
