--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
           </li>
         </ul>
       </section>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5084.213575000907!2d30.541504576096102!3d50.420481989521726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf6cc08cc56f%3A0x4dccbf027d2e5f24!2z0LHRg9C70YzQstCw0YAg0JzQsNGA0ZbRlyDQn9GA0LjQudC80LDRh9C10L3QutC-LCA3LCDQmtC40ZfQsiwg0KPQutGA0LDRl9C90LAsIDAyMDAw!5e0!3m2!1suk!2sde!4v1763127335987!5m2!1suk!2sde"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
       <section>
         <h2>join us</h2>
       </section>
