--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <header>
       <nav>
-        <a href="#"><img src="./images/Hero Image.svg" alt="mainphoto" /></a>
+        <a href="#"
+          ><img src="./images/chef-man-cap-svgrepo-com.svg" alt="logo"
+        /></a>
         <ul>
           <li><a href="#">Franshisa</a></li>
           <li><a href="#">our traditions</a></li>
@@ -21,6 +23,16 @@
       <button type="button">call</button>
     </header>
     <main>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/C0DPdy98e4c?si=aWgJtkxVFNe2cFFZ"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
       <section>
         <h1>backery</h1>
       </section>
@@ -62,6 +74,9 @@
           </li>
         </ul>
       </section>
+      <video controls>
+        <source src="./audio.video/file_example_MP4_480_1_5MG.mp4" />
+      </video>
       <section>
         <h2>formats</h2>
         <img src="./images/watermelon.png" alt="watermelon" />
@@ -95,6 +110,9 @@
       <section>
         <h2>join us</h2>
       </section>
+      <audio controls>
+        <source src="./audio.video/file_example_MP3_700KB.mp3" />
+      </audio>
     </main>
     <footer>
       <nav>
